syntax = "proto3";
package com.dxc.ptinsight.analytics;

import "ptinsight/common/proto/base.proto";


option java_package = "com.dxc.ptinsight.proto.analytics";


message EmergencyStop {
  float latitude = 1;
  float longitude = 2;
  float speed_diff = 3;
  float max_deceleration = 4;
  com.dxc.ptinsight.VehicleType vehicle_type = 5;
}
